# Convention

./: .gitignore  LICENSE  _Undefine.asmdef
Template/: BaseConfig.txt
Template/Convention/: Config.txt  Convention.txt  Internal.txt  README.txt
Template/Convention/Convention/: Interface.txt  any_class.txt  app.txt  console.txt  file or toolfile.txt  process.txt  stream.txt  thread.txt  time.txt
Template/Convention/include/: README.txt
cpp/: CMakeLists.txt  cpp.hint
cpp/Convention/: Algorithm.h  CMakeLists.txt  Config.h  Convention.h  Instance.h  Internal.h
cpp/Convention/Convention/: Interface.h  any_class_instance.h  app_instance.h  config_instance.h  console_instance.h  ffmpeg_instance.h  file_instance.h  iostream_instance.h  music_instance.h  number_instance.h  process_instance.h  std_instance.h  stream_instance.h  time_instance.h  web_instance.h
cpp/Convention/cmake/: ConventionConfig.cmake.in
cpp/Convention/include/: __internal.cpp  music_instance.cpp  virtual_console_instance.cpp  windows_app_instance.cpp  windows_console_instance.cpp  windows_file_instance.cpp  windows_process_instance.cpp  windows_web_instance.cpp
cpp/Convention/instance/: AppInstance.h  CMakeLists.txt  ConfigInstance.h  ConsoleInstance.h  FileInstance.h  Interface.h  NumberInstance.h  ProcessInstance.h  StreamInstance.h  TimeInstance.h  TreeInstance.h  Virtual[]Instance.h  WebInstance.h  _MusicInstance.h  _ffmpeg_Instance.h  any_class_instance.h  app_instance.h  config_instance.h  console_instance.h  ffmpeg_instance.h  file_instance.h  handle_std_instance.h  json_instance.h  music_instance.h  number_instance.h  process_instance.h  std_instance.h  stream_instance.h  time_instance.h  web_instance.h
cpp/Convention/instance/eval/: eval_init.hpp  eval_init_complex.hpp
cpp/Convention/instance/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
cpp/Convention/instance/nlohmann/detail/: exceptions.hpp  hash.hpp  json_custom_base_class.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_concat.hpp  string_escape.hpp  string_utils.hpp  value_t.hpp
cpp/Convention/instance/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
cpp/Convention/instance/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
cpp/Convention/instance/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  json_reverse_iterator.hpp  primitive_iterator.hpp
cpp/Convention/instance/nlohmann/detail/meta/: cpp_future.hpp  detected.hpp  identity_tag.hpp  is_sax.hpp  std_fs.hpp  type_traits.hpp  void_t.hpp
cpp/Convention/instance/nlohmann/detail/meta/call_std/: begin.hpp  end.hpp
cpp/Convention/instance/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
cpp/Convention/src/: Config.cpp  ConsoleInstance.cpp  FileInstance.cpp  WebInstance.cpp  virtual_console_instance.cpp  windows_console_instance.cpp  windows_web_instance.cpp
cpp/ConventionEngine/: CMakeLists.txt
cpp/ConventionEngine/Kernel/: CMakeLists.txt  CoreModule.h
cpp/ConventionEngine/Kernel/include/: CEAllocator.cpp  CoreModule.cpp
cpp/ConventionEngine/Runtime/: CMakeLists.txt  GlobalConfig.h
cpp/ConventionEngine/Runtime/include/: GlobalConfig.cpp
cpp/ConventionEngine/Shared/: CMakeLists.txt  CoreModule.h
cpp/ConventionEngine/Shared/cpps/: CoreModule.cpp
cpp/ConventionEngine/Test/: AllocatorTest.cpp  CMakeLists.txt  KernelTest.cpp  MemoryTest.cpp  cli.cpp  run_tests.bat  run_tests.sh
cpp/EasySave/: CMakeLists.txt  EasySave.h
cpp/Test/: CMakeLists.txt  MusicPlayer.cpp  WebTest.cpp  main.cpp  main.cu  music_player.cpp  web_test.cpp
cpp/Visual-Algorithm/: CMakeLists.txt  VisualAlgorithmInternal.h  VisualAlgorithmMain.cpp  VisualAlgorithmTest.cpp  va-internal.h  va-main.cpp  va-test.cpp
cpp/Visual-Algorithm/Singles/: CMakeLists.txt
cpp/Visual-Algorithm/Singles/sort/: va-counting.cpp  va-select.cpp
python/: LICENSE  MANIFEST.in  README.md  __init__.py  requirements.txt  setup.py
python/Convention/: Config.py  Internal.py  __init__.py  lazy.py  short.py
python/Convention.egg-info/: PKG-INFO  SOURCES.txt
python/Convention/Algorithm/: README.md  __init__.py
python/Convention/Audio/: Core.py  Microphone.py  README.md  Vocal.py  __init__.py
python/Convention/Convention/: Interface.py
python/Convention/DataBase/: AbsInterface.py  README.md  __init__.py  light_sqlite.py
python/Convention/Engine/: Internal.py  _Obs_Internal.py
python/Convention/File/: Core.py  README.md  __init__.py
python/Convention/Internal/: __init__.py
python/Convention/LLM/: README.md  __init__.py
python/Convention/Lang/: BaseClass.py  Core.py  CppLike.py  EasySave.py  README.md  Reflection.py  __init__.py
python/Convention/ML/: Keras.py  __init__.py
python/Convention/MathEx/: Core.py  README.md  Transform.py  __init__.py
python/Convention/Str/: Core.py  RE.py  README.md  __init__.py
python/Convention/UI/: __init__.py
python/Convention/Visual/: Core.py  Manim.py  OpenCV.py  WordCloud.py  __init__.py
python/Convention/Web/: BeautifulSoup.py  Core.py  README.md  (+2 more)
python/tests/: test.db  test.json  test.py  test2.json  test_embinding.py  test_function_call.py  test_llamaindex.py  test_web.py  testllamaindex.py  text.txt  text2gif.py
unity c#/: .cursorignore
unity c#/Assets/: Assets.rar
unity c#/Editor/: BasicEdior.cs  Convention.Editor.asmdef  ScriptableObject.cs
unity c#/Plugins/: Convention.Plugin.asmdef  ES3.cs  ExampleHelpWindow.cs  Math.cs  MonoPlugin.cs  Newtonsoft.Json.rar  Plugin2.cs  Texture.cs
unity c#/Resources/: BaseWindowBar.prefab  BaseWindowPlane.prefab  FPS.inputactions  FileIcons.asset  InputField.prefab  ModernUIButton.prefab  ModernUIDropdown.prefab  ModernUIInputField.prefab  ModernUIToggle.prefab  ScrollView.prefab  Text.prefab  WindowConfig.asset  WindowManager.prefab
unity c#/Runtime/: Config.cs  Convention.asmdef  GlobalConfig.cs  Internal.cs  UnityExtensions.cs
(+211 files in other folders)
